; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_px.c_px_THROW_ERROR.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_px.c_px_THROW_ERROR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PXE_NO_RANDOM = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INTERNAL_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"could not generate a random number\00", align 1
@ERRCODE_EXTERNAL_ROUTINE_INVOCATION_EXCEPTION = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @px_THROW_ERROR(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @PXE_NO_RANDOM, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i32, i32* @ERROR, align 4
  %8 = load i32, i32* @ERRCODE_INTERNAL_ERROR, align 4
  %9 = call i32 @errcode(i32 %8)
  %10 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @ereport(i32 %7, i32 %10)
  br label %20

12:                                               ; preds = %1
  %13 = load i32, i32* @ERROR, align 4
  %14 = load i32, i32* @ERRCODE_EXTERNAL_ROUTINE_INVOCATION_EXCEPTION, align 4
  %15 = call i32 @errcode(i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @px_strerror(i32 %16)
  %18 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %17)
  %19 = call i32 @ereport(i32 %13, i32 %18)
  br label %20

20:                                               ; preds = %12, %6
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, ...) #1

declare dso_local i32 @px_strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
